src/main/java/org/example/booktopia/error/InsufficientFunds.java
package org.example.booktopia.error;

public class InsufficientFunds extends Exception {
    public InsufficientFunds() {
        super("Transaction declined insufficient funds");
    }
}
